[workspace]
resolver = "3"
members = [
    "buttplug_client",
    "buttplug_core",
    "buttplug_derive",
    "buttplug_server",
    "buttplug_server_device_config",
    "buttplug_server_hwmgr_btleplug",
    "buttplug_server_hwmgr_hid",
    "buttplug_server_hwmgr_lovense_connect",
    "buttplug_server_hwmgr_lovense_dongle",
    "buttplug_server_hwmgr_serial",
    "buttplug_server_hwmgr_websocket",
    "buttplug_server_hwmgr_xinput",
]

[profile.release]
lto = true
codegen-units = 1
