[workspace]
resolver = "3"
members = [
    "crates/buttplug_client",
    "crates/buttplug_client_in_process",
    "crates/buttplug_core",
    "crates/buttplug_derive",
    "crates/buttplug_server",
    "crates/buttplug_server_device_config",
    "crates/buttplug_server_hwmgr_btleplug",
    "crates/buttplug_server_hwmgr_hid",
    "crates/buttplug_server_hwmgr_lovense_connect",
    "crates/buttplug_server_hwmgr_lovense_dongle",
    "crates/buttplug_server_hwmgr_serial",
    "crates/buttplug_server_hwmgr_websocket",
    "crates/buttplug_server_hwmgr_xinput",
    "crates/buttplug_tests",
    "crates/buttplug_transport_websocket_tungstenite",
    "crates/examples",
    "crates/intiface_engine",
]

[profile.release]
lto = true
codegen-units = 1
