[package]
name = "buttplug"
version = "9.0.8"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2021"
exclude = ["examples/**"]

[lib]
name = "buttplug"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["cdylib", "rlib"]

# Only build docs on one platform (linux)
[package.metadata.docs.rs]
targets = []
# Features to pass to Cargo (default: [])
features = ["default", "unstable"]

[features]
# Basic features
default=["tokio-runtime", "jsonschema/resolve-file", "client", "server", "serialize-json", "websockets", "btleplug-manager", "xinput-manager", "serial-manager", "hid-manager", "lovense-dongle-manager", "lovense-connect-service-manager", "websocket-server-manager"]
client=[]
server=[]
serialize-json=[]
# Connectors
websockets=["serialize-json", "tokio-tungstenite", "rustls"]
# Device Communication Managers
xinput-manager=["server"]
btleplug-manager=["server", "btleplug"]
serial-manager=["server", "serialport"]
hid-manager=["server", "hidapi"]
lovense-dongle-manager=["server", "serialport", "hidapi"]
lovense-connect-service-manager=["server","reqwest"]
websocket-server-manager=["server", "websockets"]
# Runtime managers
tokio-runtime=[]
wasm-bindgen-runtime=[]
wasm = ["server", "wasm-bindgen-runtime", "serialize-json", "uuid/js"]
dummy-runtime=[]
# Compiler config
unstable=[]
allow-unstable-v4-connections=[]

[dependencies]
buttplug_derive = "0.8.1"
# buttplug_derive = { path = "../buttplug_derive" }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
uuid = { version = "1.16.0", features = ["serde"] }
url = "2.5.4"
btleplug = { version = "0.11.8", optional = true }
# btleplug = { path = "../../btleplug", optional = true}
# btleplug = { git = 'https://github.com/deviceplug/btleplug', branch = 'master', optional = true }
strum_macros = "0.27.1"
strum = "0.27.1"
once_cell = "1.21.3"
paste = "1.0.15"
lazy_static = "1.5.0"
byteorder = "1.5.0"
thiserror = "2.0.12"
cfg-if = "1.0.0"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
dashmap = { version = "6.1.0", features = ["serde"] }
displaydoc = "0.2.5"
tokio = { version = "1.44.2", features = ["sync", "macros", "io-util"] }
async-stream = "0.3.6"
prost = "0.13.5"
tokio-util = "0.7.14"
reqwest = { version = "0.12.15", default-features = false, optional = true, features = ["rustls-tls"] }
serde-aux = "4.6.0"
getset = "0.1.5"
os_info = "3.10.0"
ahash = "0.8.11"
jsonschema = { version = "0.30.0", default-features = false }
derivative = "2.2.0"
tokio-stream = "0.1.17"
instant = "0.1.13"
regex = "1.11.1"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots", "url"], optional = true }
rustls = { version = "0.23.26", optional = true, default-features = false, features = ["ring"]}
aes = { version = "0.8.4" }
ecb = { version = "0.1.2", features = ["std"] }
sha2 = { version = "0.10.8", features = ["std"] }
# Used by several packages, but we need to bring in the JS feature for wasm. Pinned at 0.2 until dependencies update
rand = { version = "0.8" }
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
serde_yaml = "0.9.34"
test-case = "3.3.1"
tokio = { version = "1.44.2", features = ["io-std", "rt"] }
tracing-log = { version = "0.2.0" }
tokio-test = "0.4.4"

[build-dependencies]
prost-build = "0.13.5"

[target.'cfg(target_os = "windows")'.dependencies]
rusty-xinput = "1.3.0"
windows = { version = "0.61.1", features = ["Devices_Bluetooth", "Foundation"] }
serialport = { version = "4.7.1", optional = true }
hidapi = { version = "2.6.3", default-features = false, features = ["windows-native"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
serialport = { version = "4.7.1", optional = true }
# Linux hidraw is needed here in order to work with the lovense dongle. libusb breaks it on linux.
# Other platforms are not affected by the feature changes.
hidapi = { version = "2.6.3", default-features = false, features = ["linux-static-hidraw"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
serialport = { version = "4.7.1", optional = true }
hidapi = { version = "2.6.3", default-features = false, features = ["macos-shared-device"], optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.50" }
wasmtimer = { version = "0.4.1" }

[dependencies.web-sys]
version = "0.3.77"
# path = "../../wasm-bindgen/crates/web-sys"
#git = "https://github.com/rustwasm/wasm-bindgen"
optional = true
features = [
  "Navigator",
  "Bluetooth",
  "BluetoothDevice",
  "BluetoothLeScanFilterInit",
  "BluetoothRemoteGattCharacteristic",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BinaryType",
  "Blob",
  "console",
  "ErrorEvent",
  "Event",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "RequestDeviceOptions",
  "WebSocket",
  "Window"
]
