[package]
name = "buttplug_derive"
version = "0.1.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Trait Derive Macros for Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug-rs.git"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.16"
quote = "1.0.3"
