[package]
name = "buttplug_derive"
version = "0.8.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Trait Derive Macros for Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug-rs.git"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.74"
quote = "1.0.36"
