[package]
name = "buttplug_ws_connector"
version = "0.0.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Websocket connection handling for the Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug-rs.git"
keywords = ["teledildonics", "websockets"]
edition = "2018"

[dependencies]
buttplug = "0.0.2-beta.1" # { path = "../buttplug" }
futures-preview = {version="0.3.0-alpha.19", features = ["async-await"]}
ws = "0.9.1"
async-std = {version="0.99.11", features=["unstable"]}
async-trait = "0.1.17"
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7.1"
