[package]
name = "buttplug_ws_connector"
version = "0.0.2"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Websocket connection handling for the Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug-rs.git"
keywords = ["teledildonics", "websockets"]
edition = "2018"

[dependencies]
buttplug = { path = "../buttplug" }
futures = "0.3.1"
async-std = { version = "1.0.1", features = ["unstable"] }
async-trait = "0.1.17"
log = "0.4.8"
ws = { version = "0.9.1", features = ["ssl"] }
openssl = "0.10.25"
url = "2.1.0"

[dev-dependencies]
env_logger = "0.7.1"
futures-timer = "2.0.0"