[package]
name = "buttplug-examples"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug_core = { path = "../crates/buttplug_core" }
buttplug_client = { path = "../crates/buttplug_client" }
buttplug_client_in_process = { path = "../crates/buttplug_client_in_process" }
buttplug_server = { path = "../crates/buttplug_server" }
buttplug_server_device_config = { path = "../crates/buttplug_server_device_config" }
buttplug_server_hwmgr_btleplug = { path = "../crates/buttplug_server_hwmgr_btleplug" }
buttplug_transport_websocket_tungstenite = { path = "../crates/buttplug_transport_websocket_tungstenite" }
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
strum = "0.27.2"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
log = "0.4.29"
tracing = "0.1.44"
