[package]
name = "buttplug"

authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Client Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
buttplug_client = { path = "../buttplug_client" }
buttplug_transport_websocket_tungstenite = { path = "../buttplug_transport_websocket_tungstenite"}