[package]
name = "buttplug_client"
version = "10.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_client"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[dependencies]
buttplug_derive = "0.8.1"
buttplug_core = { path = "../buttplug_core" }
# buttplug_derive = { path = "../buttplug_derive" }
futures = "0.3.31"
thiserror = "2.0.12"
log = "0.4.27"
getset = "0.1.6"
tokio = { version = "1.46.1", features = ["macros"] }
dashmap = { version = "6.1.0" }
tracing-futures = "0.2.5"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonschema = { version = "0.30.0", default-features = false }
strum = "0.27.1"
strum_macros = "0.27.1"
