[package]
name = "buttplug_client"
version = "10.0.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_client"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default = ["tokio-runtime"]
tokio-runtime = ["buttplug_core/tokio-runtime"]
wasm = ["buttplug_core/wasm"]

[dependencies]
buttplug_core = { version = "10.0.1", path = "../buttplug_core", default-features = false }
futures = "0.3.32"
thiserror = "2.0.18"
log = "0.4.29"
getset = "0.1.6"
tokio = { version = "1.50.0", features = ["macros"] }
dashmap = { version = "6.1.0" }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonschema = { version = "0.45.0", default-features = false }
strum = "0.28.0"
strum_macros = "0.28.0"
