[package]
name = "buttplug_client_in_process"
version = "10.0.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_client_in_process"
path = "src/lib.rs"
test = true
doctest = true
doc = true


[features]
default = ["tokio-runtime", "btleplug-manager", "hid-manager", "lovense-dongle-manager", "lovense-connect-service-manager", "serial-manager", "websocket-manager", "xinput-manager"]
btleplug-manager=["buttplug_server_hwmgr_btleplug"]
hid-manager=["buttplug_server_hwmgr_hid"]
lovense-dongle-manager=["buttplug_server_hwmgr_lovense_dongle"]
lovense-connect-service-manager=["buttplug_server_hwmgr_lovense_connect"]
serial-manager=["buttplug_server_hwmgr_serial"]
websocket-manager=["buttplug_server_hwmgr_websocket"]
xinput-manager=["buttplug_server_hwmgr_xinput"]
tokio-runtime = ["buttplug_core/tokio-runtime", "buttplug_client/tokio-runtime", "buttplug_server/tokio-runtime"]
wasm = ["buttplug_core/wasm", "buttplug_client/wasm", "buttplug_server/wasm"]

[dependencies]
buttplug_core = { version = "10.0.1", path = "../buttplug_core", default-features = false }
buttplug_client = { version = "10.0.1", path = "../buttplug_client", default-features = false }
buttplug_server = { version = "10.0.1", path = "../buttplug_server", default-features = false }
buttplug_server_device_config = { version = "10.0.2", path = "../buttplug_server_device_config" }
buttplug_server_hwmgr_btleplug = { version = "10.0.1", path = "../buttplug_server_hwmgr_btleplug", optional = true}
buttplug_server_hwmgr_hid = { version = "10.0.0", path = "../buttplug_server_hwmgr_hid", optional = true}
buttplug_server_hwmgr_lovense_connect = { version = "10.0.0", path = "../buttplug_server_hwmgr_lovense_connect", optional = true}
buttplug_server_hwmgr_lovense_dongle = { version = "10.0.0", path = "../buttplug_server_hwmgr_lovense_dongle", optional = true}
buttplug_server_hwmgr_serial = { version = "10.0.0", path = "../buttplug_server_hwmgr_serial", optional = true}
buttplug_server_hwmgr_websocket = { version = "10.0.0", path = "../buttplug_server_hwmgr_websocket", optional = true}
buttplug_server_hwmgr_xinput = { version = "10.0.0", path = "../buttplug_server_hwmgr_xinput", optional = true}
futures = "0.3.32"
futures-util = "0.3.32"
thiserror = "2.0.18"
log = "0.4.29"
getset = "0.1.6"
tokio = { version = "1.50.0", features = ["macros"] }
dashmap = { version = "6.1.0" }
tracing-futures = "0.2.5"
tracing = "0.1.44"
