[package]
name = "buttplug_core"
version = "10.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_core"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default=["tokio-runtime"]
tokio-runtime=["tokio/rt"]
wasm=[]

# Only build docs on one platform (linux)
[package.metadata.docs.rs]
targets = []
# Features to pass to Cargo (default: [])
features = ["default", "unstable"]

[build-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
jsonschema = { version = "0.30.0", default-features = false }

[dependencies]
buttplug_derive = "0.8.1"
# buttplug_derive = { path = "../buttplug_derive" }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
displaydoc = "0.2.5"
log = "0.4.27"
getset = "0.1.6"
jsonschema = { version = "0.30.0", default-features = false }
cfg-if = "1.0.1"
tokio = { version = "1.46.1", features = ["sync", "time", "macros"] }
async-stream = "0.3.6"
strum_macros = "0.27.1"
strum = "0.27.1"
