[package]
name = "buttplug_core"
version = "10.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Buttplug Intimate Hardware Control Library - Core Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2024"
exclude = ["examples/**"]

[lib]
name = "buttplug_core"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[features]
default=["tokio-runtime"]
tokio-runtime=["tokio/rt"]
wasm=[]

# Only build docs on one platform (linux)
[package.metadata.docs.rs]
targets = []
# Features to pass to Cargo (default: [])
features = ["default", "unstable"]

[build-dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
jsonschema = { version = "0.38.1", default-features = false }

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
displaydoc = "0.2.5"
log = "0.4.29"
getset = "0.1.6"
jsonschema = { version = "0.38.1", default-features = false }
cfg-if = "1.0.4"
tokio = { version = "1.49.0", features = ["sync", "time", "macros"] }
async-stream = "0.3.6"
strum_macros = "0.27.2"
strum = "0.27.2"
derive_builder = "0.20.2"
enum_dispatch = "0.3"
